# go_sim_openmm

./: PlotOpenmmSim.ipynb  README.md  openmm_sim.py  pyproject.toml
go_sim_openmm/: __init__.py  config.py  main.py  openmm_sim.py
test/: test_forces.py
test/data/: config.toml
